# Habbit

./: .coverage  .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  frontend-redesign-contracts.md  junit.xml  pyproject.toml
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docker/: entrypoint.sh
docs/: FRONTEND.md  FRONTEND_SAFETY.md  FRONTEND_SMOKE.md  README.md  agent_bootstap.mdc  agent_rules.md  api_contract.md  api_contract.mdc  artifacts-master-prompt.md  auth_v1_pr_backlog.mdc  backend_roadmap.md  backend_roadmap.mdc  cursor-prompt.md  engineering_journal.md  overview.md  overview.mdc  quotes_imp_plan.md  session_contract.mdc  statistics_v2_pr_plan.md  testing_strategy.md  testing_strategy.mdc  theme-system.md
docs/archive/: README.md
docs/artifacts/: habitflow-auth.html  habitflow-forms.html  habitflow-habits.html  habitflow-home.html  habitflow-stats.html  habitflow-tasks.html  habitflow-themes.html
docs/contracts/: session_contract.mdc  theme-system.md
docs/imports/besedka_design_kit_2026-03/: README.md
docs/operations/: codex_workflow.md
docs/project/: overview.md  progress.md  startup.md
docs/reviews/: architecture-audit.md  upstream-proposal-v1.md  upstream-proposal-v2-draft.md  v2-direction.md  v2-landing-reference-scan.md  v2-navbar-and-stats-notes.md  v2-typography-research.md
docs/screenshots/current_state/: README.md  inventory.md
scripts/: capture_current_state_screenshots.py  capture_readme_screenshots.py  run_local_8010.cmd
seeds/: seed_habits.py  seed_tasks.py  seed_themes.py
src/: config.py  csrf.py  dependencies.py  exceptions.py  main.py  redis.py  utils.py  validation.py
src/database/: connection.py
src/database/migrations/: env.py
src/database/models/: __init__.py  base.py  habits.py  quotes.py  tasks.py  themes.py  users.py
src/repositories/: __init__.py  auth.py  base.py  habits.py  owned_base.py  quote_batches.py  quotes.py  session_store.py  tasks.py  themes.py
src/routers/: auth.py  habits.py  stats.py  tasks.py  themes.py
src/schemas/: __init__.py  auth.py  base.py  google.py  habits.py  quotes.py  statistics.py  tasks.py  themes.py
src/services/: __init__.py  auth.py  google_oauth.py  habits.py  quotes.py  statistics.py  tasks.py  themes.py  zen_quote.py
src/services/auth/: __init__.py  base.py  login.py  oauth.py  registration.py
src/static/css/: app-shell.css  auth.css  dashboard.css  design-system.css  forms.css  habits.css  home.css  layout-fixes.css  lists.css  message.css  (+5 more)
src/templates/: base.html  base_form.html  base_list.html  index.html  macroses.html  message.html
tests/: conftest.py  helpers.py
tests/api_unit/: assertions.py  auth_router_shared.py  test_auth_dependencies_unit.py  test_auth_router_html_unit.py  test_habits_router_unit.py  test_stats_router_unit.py  test_tasks_router_unit.py  test_themes_router_unit.py
tests/integration/: test_auth.py  test_habits.py  test_health.py  test_stats.py  test_tasks.py  test_themes.py  test_unauthorized_create_redirects.py
tests/unit/: test_auth_schema.py  test_auth_service.py  test_google_oauth.py  test_habit_service.py  test_habits_router_helpers.py  test_schema_validators.py  test_session_store.py  test_statistics_service.py  test_task_service.py  test_theme_service.py  test_utils.py
(+255 files in other folders)
